index.css
@media (max-width: 768px) {
    .hero {
        grid-template-columns: 1fr;
        text-align: center;
    }
    .hero > .image {
        order: -1;
        margin-bottom: 20px;
    }
}

body{
    background-image: url("images/pc.jpeg");
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    margin: 0;
}
/* Navigation Bar */
.nav-bar{
    display: flex;
    justify-content: space-between;
    padding: 20px 40px ;
    
    background-color: rgba(0, 0, 0, 0.5);
    
}
.nav-bar > .links {
    display: flex;
    gap: 20px;
}
.nav-bar > .links a{
    color: white;
    text-decoration: none;
    font-size: 18px;
    font-family: "Roboto", sans-serif;
}
.nav-bar > .links a:hover{
    color: gold;
}
/* Hero Section */
.hero{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 5px;
    align-items: center;
    padding: 20px 100px;
    background-color: rgba(0, 0, 0, 0.5);
}
.hero > .intro{
    color: white;
}
.hero > .intro h1{
    font-size: 40px;
    margin-bottom: 20px;
    font-family: "Roboto Slab", serif;
}
.hero > .intro h2{
    font-size: 28px;
    margin-bottom: 20px;
    font-family: "Roboto Mono", monospace;
    color: gold;
}
.hero > .intro h4{
    font-size: 22px;
    margin-bottom: 20px;
    font-family: "Ubuntu", sans-serif;
    color: goldenrod;
}
.hero > .intro p{
    font-size: 18px;
    line-height: 1.6;
    font-family: "Roboto", sans-serif;
}
.hero > .intro a{
    display: inline-block;
    margin-top: 20px;
    padding: 10px 20px;
    background-color: #1e88e5;
    color: white;
    text-decoration: none;
    font-size: 18px;
    border-radius: 5px;
    font-weight: 600;
    transition: all 0.3s ease;
}
.hero > .intro a:hover{
    background-color: #1565c0;
    transform: translateY(-3px);
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
}
.hero > .image{
    display: flex;
    justify-content: center;
    padding-top: -50px;
}
.hero > .image img{
    width: 200px;
    height: 200px;
    border-radius: 50%;
    object-fit: cover;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
    
}
.hero > .image img:hover{
    transform: scale(1.05);
    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.3);
}
.lower-bar{
    display: flex;
    justify-content: center;
    padding: 20px 40px ;
    
    background-color: rgba(0, 0, 0, 0.5);
}
.lower-bar > p{
    color: white;
    font-size: 16px;
    font-family: "Ubuntu Sans", sans-serif;
}

